* c-common.h (IF_COND): Moved here from cp/cp-tree.h. 	(THEN_CLAUSE): Likewise. 	(ELSE_CLAUSE): Likewise. 	(WHILE_COND): Likewise. 	(WHILE_BODY): Likewise. 	(DO_COND): Likewise. 	(DO_BODY): Likewise. 	(RETURN_EXPR): Likewise. 	(EXPR_STMT_EXPR): Likewise. 	(FOR_INIT_STMT): Likewise. 	(FOR_COND): Likewise. 	(FOR_EXPR): Likewise. 	(FOR_BODY): Likewise. 	(SWITCH_COND): Likewise. 	(SWITCH_BODY): Likewise. 	(CASE_LOW): Likewise. 	(CASE_HIGH): Likewise. 	(GOTO_DESTINATION): Likewise. 	(COMPOUND_BODY): Likewise. 	(ASM_CV_QUAL): Likewise. 	(ASM_STRING): Likewise. 	(ASM_OUTPUTS): Likewise. 	(ASM_INPUTS): Likewise. 	(ASM_CLOBBERS): Likewise. 	(DECL_STMT_DECL): Likewise. 	(STMT_EXPR_STMT): Likewise. 	(LABEL_STMT_LABEL): Likewise. 	(SCOPE_BEGIN_P): Likewise. 	(SCOPE_END_P): Likewise. 	(SCOPE_STMT_BLOCK): Likewise. 	(SCOPE_NULLIFIED_P): Likewise. 	(SCOPE_NO_CLEANUPS_P): Likewise. 	(SCOPE_PARTIAL_P): Likewise. 	(ASM_VOLATILE_P): Likewise. 	(STMT_LINENO): Likewise. 	(STMT_LINENO_FOR_FN_P): Likewise.
	* c-common.def: Added SRCLOC, SIZEOF_EXPR, ARROW_EXPR,
	ALIGNOF_EXPR, EXPR_STMT, COMPOUND_STMT, DECL_STMT, IF_STMT,
	FOR_STMT, WHILE_STMT, DO_STMT, RETURN_STMT, BREAK_STMT,
	CONTINUE_STMT, SWITCH_STMT, GOTO_STMT, LABEL_STMT, ASM_STMT,
	SCOPE_STMT, CASE_LABEL, STMT_EXPR.

	* gencheck.c (tree_codes[]): Added '#include "c-common.def"'.

	* cp/cp-tree.h (IF_COND): Move to c-common.h.
	(THEN_CLAUSE): Likewise.
	(ELSE_CLAUSE): Likewise.
	(WHILE_COND): Likewise.
	(WHILE_BODY): Likewise.
	(DO_COND): Likewise.
	(DO_BODY): Likewise.
	(RETURN_EXPR): Likewise.
	(EXPR_STMT_EXPR): Likewise.
	(FOR_INIT_STMT): Likewise.
	(FOR_COND): Likewise.
	(FOR_EXPR): Likewise.
	(FOR_BODY): Likewise.
	(SWITCH_COND): Likewise.
	(SWITCH_BODY): Likewise.
	(CASE_LOW): Likewise.
	(CASE_HIGH): Likewise.
	(GOTO_DESTINATION): Likewise.
	(COMPOUND_BODY): Likewise.
	(ASM_CV_QUAL): Likewise.
	(ASM_STRING): Likewise.
	(ASM_OUTPUTS): Likewise.
	(ASM_INPUTS): Likewise.
	(ASM_CLOBBERS): Likewise.
	(DECL_STMT_DECL): Likewise.
	(S

--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -110,6 +110,7 @@ $(DEMANGLER_PROG): cxxmain.o underscore.o $(LIBDEPS)
 	  cxxmain.o underscore.o $(LIBS)
 
 CXX_SRCS = $(srcdir)/cp/call.c $(srcdir)/cp/class.c $(srcdir)/cp/cp-tree.def \
+ $(srcdir)/c-common.def \
  $(srcdir)/cp/cp-tree.h $(srcdir)/cp/cvt.c $(srcdir)/cp/decl.c \
  $(srcdir)/cp/decl.h $(srcdir)/cp/decl2.c $(srcdir)/cp/dump.c \
  $(srcdir)/cp/errfn.c $(srcdir)/cp/error.c $(srcdir)/cp/except.c \
@@ -123,7 +124,7 @@ CXX_SRCS = $(srcdir)/cp/call.c $(srcdir)/cp/class.c $(srcdir)/cp/cp-tree.def \
 
 cc1plus$(exeext): $(P) $(CXX_SRCS) $(LIBDEPS) stamp-objlist c-common.o \
         c-pragma.o $(srcdir)/cp/cp-tree.h $(srcdir)/cp/cp-tree.def \
-	$(srcdir)/cp/gxx.gperf $(srcdir)/cp/cfns.gperf hash.o \
+	$(srcdir)/c-common.def $(srcdir)/cp/gxx.gperf $(srcdir)/cp/cfns.gperf hash.o \
 	$(srcdir)/cp/operators.def
 	cd cp; $(MAKE) $(LANG_FLAGS_TO_PASS) $(CXX_FLAGS_TO_PASS) ../cc1plus$(exeext)
 #
