--- a/gcc/cp/Makefile.in
+++ b/gcc/cp/Makefile.in
@@ -203,7 +203,7 @@ RTL_H = $(srcdir)/../rtl.h $(srcdir)/../rtl.def \
 TREE_H = $(srcdir)/../tree.h $(srcdir)/../real.h $(srcdir)/../tree.def \
 	$(srcdir)/../machmode.h $(srcdir)/../machmode.def
 CXX_TREE_H = $(TREE_H) cp-tree.h $(srcdir)/../c-common.h cp-tree.def \
-	$(srcdir)/../function.h $(srcdir)/../varray.h \
+	$(srcdir)/../c-common.def $(srcdir)/../function.h $(srcdir)/../varray.h \
 	$(srcdir)/../../include/splay-tree.h \
 	$(srcdir)/../system.h $(CONFIG_H)
 PARSE_H = $(srcdir)/parse.h
