* configure.in (--enable-checking): Update --help doc to reflect 	new defaults.  Ensure $ac_save_IFS is set before $IFS is changed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34596 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -182,7 +182,7 @@ AC_ARG_ENABLE(checking,
 			  enable expensive run-time checks.  With LIST,
 			  enable only specific categories of checks.
 			  Categories are: misc,tree,rtl,gc,gcac; default
-			  is misc,tree,rtl],
+			  is misc,tree,gc],
 [ac_checking=
 ac_tree_checking=
 ac_rtl_checking=
@@ -191,7 +191,7 @@ ac_gc_always_collect=
 case "${enableval}" in
 yes)	ac_checking=1 ; ac_tree_checking=1 ; ac_gc_checking=1 ;;
 no)	;;
-*)	IFS="${IFS= 	}"; ac_save_IFS="$IFS" IFS="$IFS,"
+*)	IFS="${IFS= 	}"; ac_save_IFS="$IFS"; IFS="$IFS,"
 	set fnord $enableval; shift
 	IFS="$ac_save_IFS"
 	for check
