* mklibgcc.in: Prefer LIB1ASMFUNCS over LIB2FUNCS when generating 	libgcc.a.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34690 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/mklibgcc.in
+++ b/gcc/mklibgcc.in
@@ -97,6 +97,12 @@ case X"$LIBGCC1" in
         echo ${out}: stmp-dirs '$(srcdir)/config/$(LIB1ASMSRC)'
 	echo "	$gcc_compile" $flags -DL$name -xassembler-with-cpp \
 	  -c '$(srcdir)/config/$(LIB1ASMSRC)' -o $out
+
+	# Remove any objects from LIB2FUNCS that are defined as optimized
+	# assembly code in LIB1ASMFUNCS.
+	LIB2FUNCS=`echo $LIB2FUNCS | sed -e 's/^'$name' //' \
+				         -e 's/ '$name' //' \
+					 -e 's/ '$name'$//'`
       done
       libgcc1_objs="$libgcc1_objs ${name}${objext}"
     done
