* java/security/Principal.java: New file. 	* Makefile.am: Added Principal.java. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34749 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -896,6 +896,7 @@ java/security/KeyPair.java \
 java/security/KeyPairGenerator.java \
 java/security/KeyPairGeneratorSpi.java \
 java/security/NoSuchProviderException.java \
+java/security/Principal.java \
 java/security/PrivateKey.java \
 java/security/Provider.java \
 java/security/PublicKey.java \
