* gnu/java/security/provider/Gnu.java: New file. 	* gnu/java/security/provider/SHA.java: New file. 	* gnu/java/security/provider/SHA1PRNG.java: New file. 	* Makefile.am: Added the above files. 	* Makefile.in: Rebuilt.
	* java/io/ObjectStreamClass.java (setUID): Use Gnu SHA instead of SHS.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34753 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -615,6 +615,9 @@ gnu/java/io/ObjectIdentityWrapper.java \
 gnu/java/lang/reflect/TypeSignature.java \
 gnu/java/lang/ArrayHelper.java \
 gnu/java/lang/ClassHelper.java \
+gnu/java/security/provider/Gnu.java \
+gnu/java/security/provider/SHA.java \
+gnu/java/security/provider/SHA1PRNG.java \
 java/io/BufferedInputStream.java \
 java/io/BufferedOutputStream.java \
 java/io/BufferedReader.java \
