--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1778,7 +1778,7 @@ PREPROCESSOR_DEFINES = \
   -DTOOL_INCLUDE_DIR=\"$(gcc_tooldir)/include\"
 
 LIBCPP_OBJS =	cpplib.o cpphash.o cpperror.o cppexp.o cppfiles.o \
-		cppinit.o cppulp.o cpplex.o mkdeps.o \
+		cppinit.o cppulp.o cpplex.o cppdefault.o mkdeps.o \
 		prefix.o version.o mbchar.o @extra_cpp_objs@
 
 LIBCPP_DEPS =	cpplib.h cpphash.h intl.h system.h
@@ -1804,12 +1804,13 @@ cpplex.o:   cpplex.c   $(CONFIG_H) $(LIBCPP_DEPS)
 cpplib.o:   cpplib.c   $(CONFIG_H) $(LIBCPP_DEPS) $(OBSTACK_H)
 cpphash.o:  cpphash.c  $(CONFIG_H) $(LIBCPP_DEPS) $(OBSTACK_H) $(HASHTAB_H)
 cppfiles.o: cppfiles.c $(CONFIG_H) $(LIBCPP_DEPS) $(SPLAY_TREE_H) mkdeps.h
+cppinit.o:  cppinit.c  $(CONFIG_H) $(LIBCPP_DEPS) cppdefault.h \
+		mkdeps.h prefix.h output.h version.h
 
-cppinit.o: cppinit.c $(CONFIG_H) $(LIBCPP_DEPS) \
-		mkdeps.h prefix.h output.h Makefile version.h
+cppdefault.o: cppdefault.c $(CONFIG_H) system.h cppdefault.h Makefile
 	$(CC) $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) \
 	  $(PREPROCESSOR_DEFINES) \
-	  -c `echo $(srcdir)/cppinit.c | sed 's,^\./,,'`
+	  -c `echo $(srcdir)/cppdefault.c | sed 's,^\./,,'`
 
 mkdeps.o: mkdeps.c $(CONFIG_H) system.h mkdeps.h
 
